tests are starting to fail with PermGen problem
git-svn-id: https://hudson.dev.java.net/svn/hudson/branches/rc@21885 71c3de6d-444a-0410-be80-ed276b4c234a